<resources>
    <string name="app_name">Traveling</string>

    <!-- Home Activity -->
    <string name="eurodisney">EuroDisney</string>
    <string name="home">Home</string>
    <string name="upcoming_meetups">Upcoming Meetups</string>
    <string name="str_btncamera">Photos</string>
    <string name="places">Places</string>
    <string name="str_btnface">Profile</string>

    <!-- Home Fragment -->
    <string name="hi">Hi!</string>
    <string name="city_of_los_angeles">City of Los Angeles</string>
    <string name="usa_los_angeles_2_weeks">USA, Los Angeles - 2 Weeks</string>
    <string name="beach_vacation">Beach Vacation</string>
    <string name="madives_3_weeks">Madives - 3 Weeks</string>
    <string name="tokio_school">Tokio School</string>
    <string name="la_coruna_1_year">La Coruña - 1 Year</string>
    <string name="end_of_travel">End Of Travel</string>

    <!-- OnBoarding Fragment -->
    <string name="tu_app_de_viajes">Tu App de Viajes</string>
    <string name="tv_info">¡Hola! Estamos buscando a millones de usuarios con inquietudes y ganas de viajar. Si eres tú? No lo dudes, accede a nuestra App y descubriras miles de destinos y facilidades para alquilar coches, ver el tiempo....</string>
    <string name="lets_start" translatable="false">Let\'s Start</string>
    <string name="encuentra_tu_pareja">Encuentra Tu Pareja</string>
    <string name="tv_info2">Hemos ayudado a millones de personas en todo el país a encontrar su pareja perfecta… ¡y tú eres el siguiente!\n</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="tv_info3">Con nuestra ayuda no te vas a decepcionar para encontrar, buscar, a tu compañero y viajar juntos!</string>


    <!-- LogIn Fragment -->
    <string name="login_to_your_account">LogIn To Your Account</string>
    <string name="welcome">Welcome, I hope you enjoy our App!!!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="login">Log In</string>
    <string name="or_sign_in_with">or Sign In with</string>
    <string name="login_with_google">Log In with Google</string>
    <string name="don_t_have_account">Don\'t have an Account?</string>
    <string name="sign_in">Sign In</string>
    <string name="channel_name">Nombre del Canal</string>
    <string name="channel_description">Descripción del Canal</string>

    <!-- Register Fragment -->

    <string name="sign_up">Sign Up</string>
    <string name="create_account">Create Account</string>
    <string name="full_name">Full Name</string>
    <string name="how_old_are_you">How old are you?</string>
    <string name="pol_tica_de_privacidad">Política de Privacidad</string>
    <string name="ver_condiciones">Ver Condiciones</string>

    <!-- Custom Dialog -->

    <string name="verify_login_data">Verify Login Data :(</string>
    <string name="Okay">OK</string>
    <string name="login_error">Login Error.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="img_camera">Camera</string>
    <string name="favorite">Favorite</string>
</resources>