<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".features.login.fragments.BoardingTwoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bg_bottom_redounded"
        android:backgroundTint="@color/color_primary_4.50"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.62"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_travelling"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="10dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/tu_app_de_viajes"
            android:src="@drawable/img_location_search"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/str_tu_app_de_viajes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/expletus_sans"
        android:text="@string/tu_app_de_viajes"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Headline4"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_descriptionApp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <TextView
        android:id="@+id/tv_descriptionApp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:fontFamily="@font/source_sans_pro"
        android:lineSpacingMultiplier="1.2"
        android:text="@string/tv_info"
        android:textAlignment="center"
        android:textAppearance="?textAppearanceBody1"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btn_Next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/str_tu_app_de_viajes" />

    <Button
        android:id="@+id/btn_Next"
        style="@style/Widget.Material3.Button"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/color_primary_4.50"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_descriptionApp" />

</androidx.constraintlayout.widget.ConstraintLayout>